--- a/content/video/00-video.Rmd
+++ b/content/video/00-video.Rmd
@@ -6,5 +6,5 @@ bibliography: ../../static/bib/references.bib
 csl: ../../static/bib/chicago-fullnote-bibliography-no-bib.csl
 ---
 
-[Lecture 00 at Youtube](https://youtu.be/xwfEMGJ4Ijw) 
+[Lecture 00 at Youtube](https://youtu.be/Md7QhHd1PHc) 
 
