--- a/content/assignment/01-assignment.Rmd
+++ b/content/assignment/01-assignment.Rmd
@@ -1,4 +1,46 @@
 ---
-title: "Truth, Beauty, and Data"
-date: "2017-09-05"
+title: "Assignment 1"
+author: "M Hallett"
+date: "21/07/2020"
+output: 
+  revealjs::revealjs_presentation:
+    css: solar.css
+    incremental: true
+    theme: black
+    highlight: haddock
+    transition: convex
+    fig_width: 7
+    fig_height: 6
+    fig_caption: true
+    self_contained: false
+    reveal_plugins: ["search", "zoom", "notes", "chalkboard", "menu"]
+    reveal_options:
+      slideNumber: true
+      previewLinks: true
+      chalkboard: 
+        theme: chalkboard
+        toggleNotesButton: true
+      menu:
+        numbers: true
 ---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = FALSE)
+```
+
+_Question 1 [8 points]_ You obtained a ${\tt gmail}$ account for this course. With this account, you can also initiate your Google Drive workspace. (i) Does Google have the right to look at your emails, documents, drawings or other objects? (ii) Does Google have the right to use information? Can it collect meta-data about your informatinon. (iii) How can you turn on or off the geographical tracking mechanism associated with your account. (iv) Are you satisfied with the level of security and user agreement with Google? (Answer in ~10 sentences please.)
+
+_Question 2 [4 points]_ Does cloud computing reduce the overall cost for computers and computation for the "average" person? If so, how? Make reference to the definitions and components of cloud and traditional computing from the lecture notes.
+
+_Question 3 [2 points]_ Give an example of how concepts from computation drifted into the life sciences?
+
+_Question 4 [4 points]_ Argue for and against each of the following items as a computing device (make references to the 3 fundamental properties of modern computers).
+
+1. compass
+2. old style electronic watch
+3. a car
+4. an assembly line to make cars at the Ford Inc. factory
+
+_Question 5 [5 points]_ 
+What privacy issues might arise in -omic studies? Are the issues of privacy more or less acute in a transcriptome-based study (as we say in class) than say a genomic DNA-based study ? Remember that both studies are based on sequencing RNA and DNA of samples
+
