--- a/public/slides/04-slides.Rmd
+++ b/public/slides/04-slides.Rmd
@@ -37,7 +37,7 @@ knitr::opts_chunk$set(echo = FALSE)
 - Our goal is to cover some very fundamental concepts underlying how data is represented and
 manipulated in R. 
 - Lecture 04 will be carried out directly in RStudio Cloud.
-- This suits the material and also gives me a chance to show you some tricks with RStudio.
+- This suites the material and also gives me a chance to show you some tricks with RStudio.
 - The code and data I use today in in the ${\tt examples}$ and ${\tt data}$ folders in RStudio project L04.
 - We don't cover all the basics of programming here. Just a few key concepts.
 
