--- a/content/reading/08-reading.Rmd
+++ b/content/reading/08-reading.Rmd
@@ -7,16 +7,26 @@ csl: ../../static/bib/chicago-fullnote-bibliography-no-bib.csl
 ---
 
 
-# Required
+# Required (Spread over L08 and L09)
 
-- [Chapters 10-11](https://r4ds.had.co.nz/wrangle-intro.html): R for Data Sience (they are short 
+- [Chapters 10-13](https://r4ds.had.co.nz/wrangle-intro.html): R for Data Sience (they are short 
 and most of the material is already familiar to you)
 
-# Recommended Reading
+- [Intro. to Metagenomics](https://www.youtube.com/watch?v=gWzUWa7-UWA)
+
+# Recommended Reading (Spread over L08 and L09)
 
 - [Sunagawa et al. (2015) Structure and function of the global ocean microbiome](https://science.sciencemag.org/content/348/6237/1261359.long)
 
 You will need to be logged into the Concordia VPN to access this paper.
+
+- [Metagenonomics (wiki)](https://en.wikipedia.org/wiki/Metagenomics)
+
+
+- [Metagenomics analysis](https://www.youtube.com/watch?v=TnWeVUx5ERU)
+
+- [Unix Tutorial](http://www.ee.surrey.ac.uk/Teaching/Unix/unixintro.html)
+
 
 # Action items  
 
