--- a/content/class/08-class.Rmd
+++ b/content/class/08-class.Rmd
@@ -25,6 +25,15 @@ output:
 
 - Do a bit of archaelogy and figure out what this ancient ${\tt data.frame}$ is.
 
-- Would science be better served if there were more standardized ways of making data and metadata available? 
+- Would science be better served if there were more standardized ways of making data and metadata available? (I'm considering Sunagawa et al's approach here.)
+
+- What is an OTU? What is a 97% OTU?
+
+- What is a prokaryote?
+
+- What are the filter sizes used by Tara Oceans?
+
+- Why is filtering important?
+
 
 
